--- a/sass/includes/_module-header-bkg-img.scss
+++ b/sass/includes/_module-header-bkg-img.scss
@@ -6,6 +6,9 @@
 }
 .front.header-bkg .nav-search {
     margin-top: -205px;
+    @media (max-width: 767px) {
+        margin-top: 0;
+    }
 }
 .front.header-bkg.header-bkg-style-frontbleed .header {
     min-height: 60px;
@@ -13,6 +16,9 @@
 .header-bkg.header-bkg-style-frontbleed .nav-search,
 .front.header-bkg.header-bkg-style-frontbleed .nav-search {
     margin-top: -100px;
+    @media (max-width: 767px) {
+        margin-top: 0;
+    }
 }
 .header-bkg.header-bkg-image .header {
     background-repeat: no-repeat;
